--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Spicetifyupdater)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_EXE_LINKER_FLAGS -"static")
 
-add_executable(Spicetifyupdater main.cpp)
+add_executable(SpicetifyUpdater main.cpp)
